refactor: enhance App component layout and update CSS for improved styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/src/index.css" rel="stylesheet">
     <title>Feature Drift</title>
   </head>
-  <body class="min-h-full">
+  <body class="min-h-full bg-[#02070b] text-white py-8">
     <div id="root" class="min-h-max flex flex-col justify-center overflow-hidden"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
