--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="/src/index.css" rel="stylesheet">
     <title>Feature Drift</title>
   </head>
-  <body class="min-h-full bg-[#02070b] text-white py-8">
-    <div id="root" class="min-h-max flex flex-col justify-center overflow-hidden"></div>
+  <body class="h-max bg-[#02070b] text-white">
+    <div id="root" class="h-max"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
