fix: update image source in AuthLoginView and preload image in index.html for improved loading performance

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link href="/src/index.css" rel="stylesheet">
-    <title>Feature Drift</title>
-  </head>
-  <body class="h-full bg-[#02070b] text-white">
-    <div id="root" class="h-full relative"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="preload" as="image" href="/assets/featuredrift-ai-art.png" />
+  <link href="/src/index.css" rel="stylesheet">
+  <title>Feature Drift</title>
+</head>
+
+<body class="h-full bg-[#02070b] text-white">
+  <div id="root" class="h-full relative"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
