feat: implement loading state with Loading component and integrate into AppRoot; add AuthLoginView and HomeUserView components

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="preload" as="image" href="/assets/featuredrift-ai-art.png" />
+  <link rel="preload" as="style" href="/src/index.css" />
   <link href="/src/index.css" rel="stylesheet">
   <title>Feature Drift</title>
 </head>
