refactor: add Office Code Pro D font family and update close button styles for consistency

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Feature Drift</title>
 </head>
 
-<body class="h-full bg-[#02070b] text-white">
+<body class="h-full bg-[#02070b] text-white font-mono">
   <div id="root" class="h-full relative"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
