--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Feature Drift</title>
 </head>
 
-<body class="h-full bg-dark-bg text-purple-600 font-mono">
-  <div id="root" class="h-full relative"></div>
+<body class="h-full bg-dark-bg text-purple-600 font-mono flex items-center justify-center">
+  <div id="root" class="h-full md:container"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
