--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="h-full bg-dark-bg text-purple-600 font-mono flex items-center justify-center">
-  <div id="root" class="h-full md:container"></div>
+  <div id="root" class="h-full container"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
