fix: update meta tags in index.html for improved SEO and social sharing

--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>Feature Drift — Explore the Fractured Future</title>
+  <meta name="title" content="Feature Drift — Explore the Fractured Future">
+  <meta name="description" content="Dive into Feature Drift, an immersive game where your choices shape reality. Explore a fragmented digital universe, engage in strategic battles, and uncover hidden truths.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://featuredrift.com">
+  <meta property="og:title" content="Feature Drift — Explore the Fractured Future">
+  <meta property="og:description" content="Dive into Feature Drift, an immersive game where your choices shape reality. Explore a fragmented digital universe, engage in strategic battles, and uncover hidden truths.">
+  <meta property="og:image" content="https://featuredrift.com/assets/featuredrift-ai-art.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://featuredrift.com">
+  <meta property="twitter:title" content="Feature Drift — Explore the Fractured Future">
+  <meta property="twitter:description" content="Dive into Feature Drift, an immersive game where your choices shape reality. Explore a fragmented digital universe, engage in strategic battles, and uncover hidden truths.">
+  <meta property="twitter:image" content="https://featuredrift.com/assets/featuredrift-ai-art.png">
+
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="preload" as="image" href="/assets/featuredrift-ai-art.png" />
   <link rel="preload" as="style" href="/src/index.css" />
   <link href="/src/index.css" rel="stylesheet">
-  <title>Feature Drift</title>
 </head>
 
 <body class="h-full bg-dark-bg text-purple-600 font-mono flex items-center justify-center">
