fix: update Open Graph and Twitter image references for consistency

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta property="og:url" content="https://featuredrift.com">
   <meta property="og:title" content="Feature Drift — Explore the Fractured Future">
   <meta property="og:description" content="Dive into Feature Drift, an immersive game where your choices shape reality. Explore a fragmented digital universe, engage in strategic battles, and uncover hidden truths.">
-  <meta property="og:image" content="https://featuredrift.com/assets/featuredrift-ai-art.png">
+  <meta property="og:image" content="https://featuredrift.com/assets/nexus-ai-art.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://featuredrift.com">
   <meta property="twitter:title" content="Feature Drift — Explore the Fractured Future">
   <meta property="twitter:description" content="Dive into Feature Drift, an immersive game where your choices shape reality. Explore a fragmented digital universe, engage in strategic battles, and uncover hidden truths.">
-  <meta property="twitter:image" content="https://featuredrift.com/assets/featuredrift-ai-art.png">
+  <meta property="twitter:image" content="https://featuredrift.com/assets/nexus-ai-art.png">
 
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="preload" as="image" href="/assets/featuredrift-ai-art.png" />
